@@ -18,6 +18,7 @@
 package org.apache.hadoop.hdfs.server.datanode.metrics;
 
 import org.apache.hadoop.classification.InterfaceAudience;
+import org.apache.hadoop.metrics2.MetricsSource;
 
 import java.io.IOException;
 
@@ -36,8 +37,8 @@ import java.io.IOException;
  * @see org.apache.hadoop.hdfs.server.datanode.metrics.DataNodeMetrics
  */
 @InterfaceAudience.Private
-public interface FSDatasetMBean {
-
+public interface FSDatasetMBean extends MetricsSource {
+  
   /**
    * Returns the total space (in bytes) used by a block pool
    *
